<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TopupDetailsActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:id="@+id/hidden"/>


    <EditText
        android:id="@+id/numberInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_margin="15dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/hidden"
        android:hint="Input Number"
        android:maxLength="11"


        android:inputType="phone"/>

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/arrow"
        android:padding="15dp"
        android:layout_margin="15dp"
        app:layout_constraintTop_toBottomOf="@+id/numberInput"/>




</androidx.constraintlayout.widget.ConstraintLayout>