<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TopupWorkActivity">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/catchNum"
        android:padding="15dp"
        android:layout_margin="15dp"
        android:text=""
        android:textSize="14sp"
        android:textStyle="normal"
        android:textAlignment="viewStart"
        android:textColor="#000000">

    </TextView>


    <ImageView
        android:id="@+id/operatorIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@+id/catchNum"
        android:padding="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="15dp">
    </ImageView>

    <Button
        android:id="@+id/robi"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="Robi"
        app:layout_constraintTop_toBottomOf="@+id/operatorIcon"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="30dp" />

    <Button
        android:id="@+id/airtel"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/operatorIcon"
        android:layout_margin="30dp"
        android:text="Airtel"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/gp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="GP"
        app:layout_constraintTop_toBottomOf="@+id/airtel"
        android:layout_margin="30dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/banglalink"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="Banglalink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/airtel"
        android:layout_margin="30dp" />

    <Button
        android:id="@+id/teletalk"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="Teletalk"
        app:layout_constraintTop_toBottomOf="@+id/gp"
        android:layout_margin="30dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/prepaid"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:text="Prepaid"
        app:layout_constraintTop_toBottomOf="@+id/teletalk"
        android:layout_margin="30dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/postpaid"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:text="Postpaid"
        app:layout_constraintTop_toBottomOf="@+id/teletalk"
        android:layout_margin="30dp"
        app:layout_constraintEnd_toEndOf="parent"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@+id/prepaid"
        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="10dp"
        android:padding="10dp">

        <at.markushi.ui.CircleButton
            android:id="@+id/imageView"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/right"
            app:cb_color="#99CC00"
            app:cb_pressedRingWidth="8dp"
            android:layout_gravity="center"/>

        </FrameLayout>






</androidx.constraintlayout.widget.ConstraintLayout>